# kf2_modding_utility

./: .gitignore  README.md  pyproject.toml  to_do_list.txt
config/: client_settings.json
config/kf2_modding_utility_client/: game_mode.json  settings.json  window_position.json
config/settings_examples/: map_name.json
dev_files/: kf2_modding_utility_workspace
gui/: data.json  launcher.py  main.py  open_settings.py
inis/: KFEditor.ini
kf2_modding_utility/: kf2_modding_utility.py  launch_cli.py  launch_client.py  launch_server.py  launcher_cli.py  launcher_client.py  launcher_server.py
kf2_modding_utility/client/: close_kf2.py  main.py  make_settings.py  open_kf2_modding_utility_dir.py  open_webadmin.py
kf2_modding_utility/kf2_modding_utility_client/: kf2_modding_utility_client.py
kf2_modding_utility/kf2_modding_utility_server/: kf2_modding_utility_server.py
kf2_modding_utility/server/: main.py
kf2_modding_utility/settings/: data.json  window_position.json
kf2_modding_utility_client/settings/: data.json  window_position.json
other/: ideas.txt  kf2_mythical_vscode_workspace.code-workspace  make_settings.py  to_do_list.txt
scripts/python/: brew_kf2_mods.py  brew_mods.py  compile_mods.py  open_blender.py  open_editor.py  open_game_to_server.py  open_kf2.py  open_kf2_dir.py  open_kf2_docs_dir.py  open_kf2_editor.py  open_kf2_to_server.py  open_umodel.py  open_vps.py  open_webadmin.py  test_mods.py  test_published_mods.py  test_unpublished_mods.py
src/: launch_client.py  launch_server.py
upks/: Mythical.upk
upload_dir/: Mythical.upk
(+144 files in other folders)
