[tool.poetry]
name = "kf2-modding-utility"
version = "0.1.0"
description = "A modding utility for Killing Floor 2"
authors = ["Mythical-Github <MythicalData@gmail.com>"]
readme = "README.md"
packages = [{include = "kf2_modding_utility"}]

[tool.poetry.dependencies]
python = "^3.11"
pyqt5 = "^5.15.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
